tests/anp_banp_blog_demo_2/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-monitoring
  namespace: foo
spec:
  podSelector:
  policyTypes:
    - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring

---

apiVersion: policy.networking.k8s.io/v1alpha1
kind: BaselineAdminNetworkPolicy
metadata:
  name: default
spec:
  subject:
    namespaces:
      matchLabels:
        security: internal
  ingress:
  - name: "deny-ingress-from-all-namespaces"
    action: "Deny"
    from:
    - namespaces:
          matchLabels:
            kubernetes.io/metadata.name: monitoring
    ports:
      - portRange:
          protocol: TCP
          start: 1
          end: 9000

---

apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: allow-monitoring
spec:
  priority: 9
  subject:
    namespaces: {}
  ingress:
  - name: "allow-ingress-from-monitoring"
    action: "Allow"
    from:
    - namespaces:
          matchLabels:
            kubernetes.io/metadata.name: monitoring
    ports:
      - portNumber:
          protocol: TCP
          port: 1234
            


---

apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: pass-monitoring
spec:
  priority: 7
  subject:
    namespaces:
      matchLabels:
        security: internal
  ingress:
  - name: "pass-ingress-from-monitoring"
    action: "Pass"
    from:
    - namespaces:
          matchLabels:
            kubernetes.io/metadata.name: monitoring
    ports:
      - portNumber:
          protocol: TCP
          port: 8080
